--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ body {
     margin: 10px 20px;
 }
 
-input[type='button']{
+.cta{
   display: inline-block;
   zoom: 1;
   line-height: normal;
@@ -65,8 +65,8 @@ input[type='button']{
   margin: 0 10px 0 0;
 }
 
-input[type='button']:hover,
-input[type='button']:focus {
+.cta:hover,
+.cta:focus {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#1a000000',GradientType=0);
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), color-stop(40%, rgba(0,0,0, 0.05)), to(rgba(0,0,0, 0.10)));
     background-image: -webkit-linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
